# plag-scan

./: .gitignore  CMakeLists.txt  DEMO_GUIDE.md  PRESENTATION_SLIDES.md  PROJECT_DESCRIPTION.md  PROJECT_INFO.md  QUICK_START.md  README.md
data/: sample1.txt  sample2.txt  sample2_original.cpp  sample2_plagiarised.cpp  sample_code1.cpp  sample_code2.cpp
docs/: analysis.md
include/: file_io.h  pattern_matcher.h  preprocessor.h  scorer.h  similarity_engine.h
src/: file_io.cpp  kmp.cpp  lcs.cpp  main.cpp  pattern_matcher.cpp  preprocessor.cpp  rabin_karp.cpp  report.cpp  scorer.cpp  similarity_engine.cpp  suffix_array.cpp
tests/: integration_test.cpp  preprocessor_test.cpp  test_file_io.cpp  test_pattern.cpp  test_scorer.cpp  test_similarity.cpp
